# laspa

./: Cargo.toml  README.md  check.sh  main  output.ll
.devcontainer/: devcontainer.json
.github/workflows/: Test.yml  rust.yml
artifacts/: output.ll
examples/: collatz.laspa  fib.laspa  test.laspa
laspa-std/: Cargo.toml
laspa-std/src/: lib.rs
laspa-toolchain/: Cargo.toml
laspa-toolchain/artifacts/: main  output.bc  output.ll  output.s  output_1.ll
laspa-toolchain/src/: args.rs  llvm.rs  main.rs
src/: args.rs  lib.rs  llvm.rs  main.rs
