[package]
name = "laspa"
version = "0.2.0"
edition = "2021"
description = "A simple Lisp-like language built with Rust"
readme = "README.md"
repository = "https://github.com/manorajesh/laspa"
license = "MIT"
keywords = ["language", "compiler", "interpreter", "programming-language", "parse"]
categories = ["compilers"]
exclude = ["examples", ".github"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm16-0"] }
lazy_static = { version = "1.4.0", default-features = false }
regex = { version = "1.9.3", default-features = false }

[lib]
crate-type = ["staticlib"]